--- a/src/app/core/pages/home/homePage/homePage.component.html
+++ b/src/app/core/pages/home/homePage/homePage.component.html
@@ -1,4 +1,3 @@
-<p>
-  <app-product></app-product>
-  homePage works!31231222222
-</p>
+<div class="product-list">
+  <app-product [product]="productEx"></app-product>
+</div>
